syntax = "proto3";
package dydxprotocol.ve;

option go_package = "github.com/StreamFinance-Protocol/stream-chain/protocol/app/ve/types";

// PricePair defines a pair of prices for a market.
message PricePair {
  bytes spot_price = 1; // Plain oracle price (used for funding rates)
  bytes pnl_price = 2;  // Funding rate weighted price (used for pnl and liquidations)
}

// Daemon VoteExtension defines the vote extension structure for daemon prices.
message DaemonVoteExtension {
  // Prices defines a map of marketId -> PricePair.
  map<uint32, PricePair> prices = 1;
}