syntax = "proto3";
package klyraprotocol.bridge;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/StreamFinance-Protocol/stream-chain/protocol/x/bridge/types";

// BridgeEvent is a recognized event from the Ethereum blockchain.
message BridgeEvent {
  // The unique id of the Ethereum event log.
  uint32 id = 1;

  // The tokens bridged.
  cosmos.base.v1beta1.Coin coin = 2 [ (gogoproto.nullable) = false ];

  // The account address or module address to bridge to.
  string address = 3 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // The Ethereum or klyra block height of the event.
  uint64 block_height = 4;

  // True if the bridge event is for a deposit.bool
  bool is_deposit = 5;
}

message BridgeWithdraw {
  // The amount of sdai to withdraw
  string sdai_amount = 1; 

  // The klyra account that sdai is being withdrawn from
  string account = 2;

  // The eth address that the funds are being bridged to
  string eth_recipient = 3;
}
